--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "vite": "^7.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.3"
   }
 }
